--- a/package.json
+++ b/package.json
@@ -57,8 +57,11 @@
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-plugin-react": "^7.32.2",
+    "postcss-cli": "^8.3.1",
+    "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1"
   }
 }
