--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,30 +10,23 @@
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
-  "overrides": [
-  ],
+  "overrides": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "@typescript-eslint",
-    "unused-imports",
-    "react-hooks",
-    "prettier"
-  ],
+  "plugins": ["react", "@typescript-eslint", "unused-imports", "react-hooks", "prettier"],
   "settings": {
     "import/resolver": {
-        "typescript": {}
+      "typescript": {}
     }
   },
   "rules": {
     "react/react-in-jsx-scope": "off",
     "camelcase": "error",
     "spaced-comment": "error",
-    "quotes": ["error", "single"],
+    "quotes": ["error", "single", { "allowTemplateLiterals": true }],
     "no-duplicate-imports": "error",
     "unused-imports/no-unused-imports": "error",
     "unused-imports/no-unused-vars": "error",
