--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,28 +10,21 @@
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
-  "overrides": [
-  ],
+  "overrides": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "@typescript-eslint",
-    "unused-imports",
-    "react-hooks",
-    "prettier"
-  ],
+  "plugins": ["react", "@typescript-eslint", "unused-imports", "react-hooks", "prettier"],
   "settings": {
     "import/resolver": {
-        "typescript": {}
+      "typescript": {}
     }
   },
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "camelcase": "error",
+    "camelcase": "off",
     "spaced-comment": "error",
     "quotes": ["error", "single"],
     "no-duplicate-imports": "error",
