--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "API_URL=$API_URL react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts start",
+    "build": "API_URL=$API_URL react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
