--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "node-sass": "^7.0.3",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -26,6 +27,7 @@
     "react-router": "^6.11.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.68.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -60,11 +62,8 @@
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
-    "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-plugin-react": "^7.32.2",
-    "postcss-cli": "^8.3.1",
-    "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1"
   }
 }
