--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/axios": "^0.14.0",
     "@types/node": "^17.0.45",
+    "@types/node-sass": "^4.11.5",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "axios": "^1.4.0",
@@ -59,6 +60,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
+    "@types/css-modules": "^1.0.3",
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
