--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": "./",
-    "paths": {
-      "*": ["src/types/*"]
-     }
+    "jsx": "react-jsx"
   },
   "include": [
     "src"
