--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "API_URL=$API_URL react-scripts start",
     "build": "API_URL=$API_URL react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
